--- a/manifest.json
+++ b/manifest.json
@@ -12,15 +12,15 @@
   "icons": [
     {
       "src": "/imgs/littlelogo.png",
-      "sizes": "192x192",
+      "sizes": "48x48 96x96 128x128 192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
       "src": "/imgs/littlelogo.png",
-      "sizes": "512x512",
+      "sizes": "256x256 384x384 512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     }
   ],
   "categories": ["education", "security", "research"],
@@ -37,14 +37,14 @@
       "name": "WATCHTOWER Dashboard",
       "short_name": "Dashboard",
       "description": "Access the WATCHTOWER threat monitoring dashboard",
-      "url": "https://public.wraven.org",
+      "url": "/watchtower/",
       "icons": [{ "src": "/imgs/littlelogo.png", "sizes": "192x192" }]
     },
     {
       "name": "Research Blog",
       "short_name": "Blog",
       "description": "Read our latest cybersecurity research",
-      "url": "https://blog.wraven.org",
+      "url": "/blog/",
       "icons": [{ "src": "/imgs/littlelogo.png", "sizes": "192x192" }]
     }
   ]
