--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,31 @@
   "icons": [
     {
       "src": "/imgs/littlelogo.png",
-      "sizes": "48x48 96x96 128x128 192x192",
+      "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/imgs/littlelogo.png",
-      "sizes": "256x256 384x384 512x512",
+      "src": "/imgs/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/imgs/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/imgs/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/imgs/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
@@ -37,15 +55,22 @@
       "name": "WATCHTOWER Dashboard",
       "short_name": "Dashboard",
       "description": "Access the WATCHTOWER threat monitoring dashboard",
-      "url": "/watchtower/",
-      "icons": [{ "src": "/imgs/littlelogo.png", "sizes": "192x192" }]
+      "url": "https://public.wraven.org",
+      "icons": [{ "src": "/imgs/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Research Blog",
       "short_name": "Blog",
       "description": "Read our latest cybersecurity research",
-      "url": "/blog/",
-      "icons": [{ "src": "/imgs/littlelogo.png", "sizes": "192x192" }]
+      "url": "https://blog.wraven.org",
+      "icons": [{ "src": "/imgs/icon-192x192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Discord Server",
+      "short_name": "Discord",
+      "description": "Join the WRAVEN Discord community",
+      "url": "https://discord.gg/uYkvSU8DHy",
+      "icons": [{ "src": "/imgs/icon-192x192.png", "sizes": "192x192" }]
     }
   ]
 }
